# open-dash

./: LICENSE  README.md  pyproject.toml
examples/multi-page-lambda/: requirements.txt
examples/multi-page-lambda/pages/: about.py  home.py
examples/multi-page-static/: app.py
examples/multi-page-static/pages/: about.py  home.py
examples/single-page-static/: app.py  requirements.txt
opendash/: __init__.py  __main__.py  bundle.py  config.py
opendash/assets/: assets-bundler.py  assets_bundler.py  open_dash_output.py
opendash/assets/server/: Dockerfile.lambda  index.py
src/: __init__.py  __main__.py  bundle.py
src/assets/: assets-bundler.py
src/assets/server/: Dockerfile.lambda
src/assets/warmer/: index.py  requirements.txt
tests/integration/: base.py  test_multi_page_lambda.py  test_multi_page_static.py  test_single_page_static.py
tests/integration/fixtures/layout/: multi-page-lambda.json  multi-page-static.json  single-page-static.json
tests/integration/fixtures/output-config/: multi-page-lambda.json  multi-page-static.json  single-page-static.json
