[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "open-dash"
dynamic = ["version"]
description = 'Open Dash packages Plotly dash applications for deployment to AWS S3 and Lambda. Developed by Zonké.'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = [
  "dash", "deployment", "serverless", "zonke"
]
authors = [
  { name = "Zonké, Inc.", email = "support@zonke.dev" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Web Environment",
  "Framework :: Dash",
  "Framework :: Flask",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Topic :: Software Development :: Build Tools",
]
dependencies = []

[project.urls]
Homepage = "https://zonke.dev"
Documentation = "https://github.com/zonke-inc/open-dash#readme"
Issues = "https://github.com/zonke-inc/open-dash/issues"
Source = "https://github.com/zonke-inc/open-dash"

[project.scripts]
open-dash = "opendash.__main__:main"

[tool.hatch.version]
path = "opendash/__about__.py"

[tool.hatch.build.targets.sdist]
packages = [
  "opendash"
]

[tool.hatch.build.targets.wheel]
packages = [
  "opendash"
]
